# pig_posture_kaggle_project

./: .gitignore  DATA.md  INIT_PLAN.md  README.md  classes_config.yml  pyproject.toml  pyproject2.toml.draft
configs/: torchvision_train_base.yaml  torchvision_train_strategy_A.yaml  yolo_train1_local.yaml  yolo_train2_base.yaml  yolo_train2_local_example.yaml
docs_models/: DATA_STRATEGY.md  TORCHVISION_IMPLEMENTATION.md  YOLO_CROSS_VALIDATION.md  YOLO_SINGLE.md
notebooks/: EDA.ipynb  baseline-yolov11n-model-py.ipynb  compare_model_predictions.ipynb  prepare_data.ipynb  yolo_results_analysis.ipynb
pig_pipeline/: __init__.py  config.py  tracking.py
pig_pipeline/data/: __init__.py  prepare.py  schema.py  splits.py
pig_pipeline/training/: __init__.py  metrics.py  torchvision.py  utills.py  yolo.py
scripts/: prepare_data.py  prepare_data_ood.py  run_torchvision_cv.py  run_torchvision_ood_val.py  run_torchvision_single.py  run_yolo_cv.py  run_yolo_ood_val.py  run_yolo_single.py
tests/: test_torchvision_impl.py
