[project]
name = "pig-posture-kaggle-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel==6.30",
    "numpy>=2.0.0",
    "opencv-contrib-python-headless>=4.13.0.92",
    "pandas>=2.2.0",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "ultralytics>=8.3.0",
    "wandb>=0.19.0",
]
